# Tele

./: .gitignore  DEPLOYMENT.md  README.md  SETUP_GUIDE.md  extract_local.py  fix_legacy_json.py  models.md  nbe_stage2_ocr_extraction.ipynb
data/: README.md
data/pipeline_output/extractions/cybersecurity_approval_procedures_for_internet_of_things__iot__devices/: page_001.json  page_002.json  page_003.json  page_004.json  page_005.json
data/pipeline_output/extractions/intermediate_type_approval_procedures/: page_001.json  page_002.json  page_003.json  page_004.json
data/pipeline_output/extractions/procedures_required_to_obtain_a_permit_for_establishing_and_operating_private-use_internet_of_things_systems_for_government_entities/: page_001.json  page_002.json  page_003.json
data/pipeline_output/extractions/simplified_type_approval_procedures/: page_001.json  page_002.json  page_003.json  page_004.json
data/pipeline_output/extractions/strict_type_approval_procedures/: page_001.json  page_002.json  page_003.json  page_004.json  page_005.json  page_006.json  page_007.json  page_008.json
data/pipeline_output/extractions/user_awareness_guide_for_international_mobile_roaming_service/: page_001.json  page_002.json
data/pipeline_output/extractions/user_rights_regulations/: page_001.json  page_002.json  page_003.json  page_004.json  page_005.json  page_006.json  page_007.json  page_008.json  page_009.json  page_010.json  page_011.json  page_012.json
deploy/: docker-compose.dev.yml  docker-compose.yml
deploy/config/: .env.example
docs/: frontend_handover_guide.md  runbook.md
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.tsx  ChatScreen.module.css  ChatScreen.tsx  CitationPanel.module.css  CitationPanel.tsx  LoginScreen.module.css  LoginScreen.tsx  api.ts  index.css
frontend/src/api/: ragApi.ts
frontend/src/components/: ChatMessage.tsx  CitationsPanel.tsx  MessageInput.tsx  Sidebar.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: api.ts
frontend_enhancements/: login_page.html  main-chat-page.html
microservices/extraction_service/: .env.example  Dockerfile  README.md  pyproject.toml
microservices/extraction_service/src/extraction_service/: __init__.py  config.py  coords.py  cropper.py  extractor.py  main.py  models.py
microservices/extraction_service/tests/: conftest.py  test_extractor.py
microservices/indexing_service/: .env.example  Dockerfile  README.md  pyproject.toml
microservices/indexing_service/scratch/: fix_crops_case.py  inspect_metadata.py  inspect_metadata_urls.py  test_milvus.py
microservices/indexing_service/src/indexing_service/: __init__.py  catalog.py  config.py  enricher.py  main.py  models.py  object_store.py  pipeline.py  vectorstore.py
microservices/indexing_service/tests/: conftest.py  test_enricher.py
microservices/orchestrator_service/: Dockerfile  pyproject.toml
microservices/orchestrator_service/src/orchestrator_service/: config.py  main.py  minio_client.py  pipeline.py
microservices/rag_service/: .env.example  Dockerfile  README.md  pyproject.toml
microservices/rag_service/src/rag_service/: chain.py  config.py  main.py  models.py  prompts.py  retriever.py  safety.py
microservices/rag_service/tests/: conftest.py  test_chain.py
old-retrievel-with-frontend/: api_server.py  app.py  rag_pipeline.py
old-retrievel-with-frontend/frontend/src/: ChatScreen.module.css  ChatScreen.tsx  CitationPanel.module.css  LoginScreen.module.css  LoginScreen.tsx  api.ts  index.css
scripts/: upload_pdfs.py
shared/nbe_schemas/: pyproject.toml
(+3 files in other folders)
